--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
   <parent>
     <groupId>org.apache.hadoop</groupId>
     <artifactId>hadoop-project</artifactId>
-    <version>2.9.0-SNAPSHOT</version>
-    <relativePath>hadoop-project-2.9.0</relativePath>
+    <version>2.6.0-cdh5.11.1</version>
   </parent>
   <artifactId>hadoop-azure</artifactId>
   <name>Apache Hadoop Azure support</name>
@@ -144,9 +143,9 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-storage</artifactId>
+        <version>4.2.0</version>
       <scope>compile</scope>
     </dependency>
-    
 
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -201,4 +200,20 @@
     </dependency>
     
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>dynamodblocal</id>
+      <name>AWS DynamoDB Local Release Repository</name>
+      <url>http://dynamodb-local.s3-website-us-west-2.amazonaws.com/release</url>
+    </repository>
+    <repository>
+      <id>cdh.repo</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
+      <name>Cloudera Repositories</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
